# rag_cookbooks

./: pyproject.toml
workshop_series/: improving_rag.ipynb  multimodal_rag.ipynb  pyproject.toml
