[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
faiss-cpu = "^1.8.0"
sentence-transformers = "^3.0.1"
langchain-text-splitters = "^0.2.1"
tiktoken = "^0.7.0"
python-dotenv = "^1.0.1"
arize-phoenix = {extras = ["evals"], version = "^4.4.1"}
openai = "^1.34.0"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
